--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,5 +4,31 @@
 #
 #    pip-compile requirements-dev.in
 #
+altgraph==0.17
+    # via pyinstaller
+click==8.0.1
+    # via pip-tools
+colorama==0.4.4
+    # via click
+future==0.18.2
+    # via pefile
 invoke==1.5.0
     # via -r requirements-dev.in
+pefile==2021.5.13
+    # via pyinstaller
+pep517==0.10.0
+    # via pip-tools
+pip-tools==6.1.0
+    # via -r requirements-dev.in
+pyinstaller-hooks-contrib==2021.1
+    # via pyinstaller
+pyinstaller==4.3
+    # via -r requirements-dev.in
+pywin32-ctypes==0.2.0
+    # via pyinstaller
+toml==0.10.2
+    # via pep517
+
+# The following packages are considered to be unsafe in a requirements file:
+# pip
+# setuptools
