--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -6,28 +6,52 @@
 #
 altgraph==0.17
     # via pyinstaller
+appdirs==1.4.4
+    # via black
+black==21.4b2
+    # via -r requirements-dev.in
 click==8.0.1
-    # via pip-tools
+    # via
+    #   black
+    #   pip-tools
 colorama==0.4.4
     # via click
+flake8==3.9.2
+    # via -r requirements-dev.in
 future==0.18.2
     # via pefile
 invoke==1.5.0
     # via -r requirements-dev.in
+isort==5.8.0
+    # via -r requirements-dev.in
+mccabe==0.6.1
+    # via flake8
+mypy-extensions==0.4.3
+    # via black
+pathspec==0.8.1
+    # via black
 pefile==2021.5.13
     # via pyinstaller
 pep517==0.10.0
     # via pip-tools
 pip-tools==6.1.0
     # via -r requirements-dev.in
+pycodestyle==2.7.0
+    # via flake8
+pyflakes==2.3.1
+    # via flake8
 pyinstaller-hooks-contrib==2021.1
     # via pyinstaller
 pyinstaller==4.3
     # via -r requirements-dev.in
 pywin32-ctypes==0.2.0
     # via pyinstaller
+regex==2021.4.4
+    # via black
 toml==0.10.2
-    # via pep517
+    # via
+    #   black
+    #   pep517
 
 # The following packages are considered to be unsafe in a requirements file:
 # pip
